--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,14 @@
     "silent": true
   },
   "builds": [
-    { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } },
-    { "src": "backend/index.js", "use": "@vercel/node" }
+    { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/index.js" },
-    { "src": "/public/(.*)", "dest": "/backend/public/$1" },
-    { "src": "/(.*)", "dest": "/frontend/$1" }
+    { "src": "/static/(.*)", "dest": "/frontend/static/$1" },
+    { "src": "/favicon.ico", "dest": "/frontend/favicon.ico" },
+    { "src": "/manifest.json", "dest": "/frontend/manifest.json" },
+    { "src": "/(.*).png", "dest": "/frontend/$1.png" },
+    { "src": "/(.*).svg", "dest": "/frontend/$1.svg" },
+    { "src": "/(.*)", "dest": "/frontend/index.html" }
   ]
 } 
